Made command-line startup for running without master work without NPE because authsMap is not included. Fixed doco. Fixed stack traces being truncated. Added caching to ResourceManager. Added skipMutators to RunOptions.

--- a/src/main/resources/restreplay/_includes/reports-include.css
+++ b/src/main/resources/restreplay/_includes/reports-include.css
@@ -330,3 +330,6 @@ DIV.mutation {
     padding: 2px;
     background-color: white;
 }
+.cached-resource {
+    color: green;
+}
